--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ python-multipart==0.0.6
 python-jose[cryptography]==3.3.0
 python-dotenv==1.0.0
 celery[redis]==5.3.4
-redis==5.0.1
+redis>=4.5.2,<5.0.0
 aiofiles==23.2.1
 httpx==0.25.2
 uuid==1.30 
