fix: resolve technical accuracy scoring bug
- Fixed technical accuracy returning 1% instead of 100% for perfect scores
- Updated verify_technical_accuracy to return percentage format (Score: 100%)
- Updated parse_verification_report to handle both percentage and decimal formats
- Technical accuracy now consistent with style compliance scoring
- Perfect scores (no issues) now correctly show ~100% instead of 1%

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
     image: redis:7-alpine
     ports:
       - "6379:6379"
-    command: redis-server --appendonly yes
+    command: redis-server --appendonly yes --maxmemory 256mb --maxmemory-policy allkeys-lru
     volumes:
       - redis_data:/data
     restart: unless-stopped
