--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,44 @@
-fastapi>=0.104.1
-uvicorn[standard]>=0.24.0
-pydantic>=2.5.0
-pydantic-settings>=2.1.0
-langchain>=0.1.0
-langchain-openai>=0.1.0
+# FastAPI and server dependencies
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+
+# LangChain ecosystem (production versions)
+langchain>=0.1.20,<0.3.0
+langgraph>=0.0.60,<0.3.0
+langsmith>=0.1.0,<0.2.0
+langchain-core>=0.1.50,<0.3.0
 langchain-community>=0.0.29
-langgraph>=0.0.55
-langchain-core>=0.1.40
-tavily-python>=0.3.3
-openai>=1.10.0
+langchain-openai>=0.0.2,<1.0.0
+
+# OpenAI for LLM calls
+openai>=1.3.0,<2.0.0
+
+# HTTP client
+httpx>=0.25.2,<1.0.0
+aiohttp>=3.8.0,<4.0.0
+
+# Data validation
+pydantic>=2.5.0,<3.0.0
+pydantic-settings>=2.1.0,<3.0.0
+
+# Environment configuration
+python-dotenv>=1.0.0,<2.0.0
+
+# Type hints
+typing-extensions>=4.8.0
+
+# Tavily API client
+tavily-python>=0.2.2,<1.0.0
+
+# Essential LangChain dependencies
+PyYAML>=5.3
+jsonpatch>=1.33
+
+# Additional dependencies (preserved from original)
 tiktoken==0.5.2
 python-multipart==0.0.6
 python-jose[cryptography]==3.3.0
-python-dotenv==1.0.0
 celery[redis]==5.3.4
 redis>=4.5.2,<5.0.0
 aiofiles==23.2.1
-httpx==0.25.2
 uuid==1.30 
