--- a/requirements.txt
+++ b/requirements.txt
@@ -2,13 +2,13 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 
-# LangChain ecosystem (compatible production versions)
-langchain>=0.2.0,<0.3.0
-langgraph>=0.2.0,<0.3.0
+# LangChain ecosystem (production versions)
+langchain>=0.1.20,<0.3.0
+langgraph>=0.0.60,<0.3.0
 langsmith>=0.1.0,<0.2.0
-langchain-core>=0.2.0,<0.3.0
-langchain-community>=0.2.0,<0.3.0
-langchain-openai>=0.1.0,<2.0.0
+langchain-core>=0.1.50,<0.3.0
+langchain-community>=0.0.29
+langchain-openai>=0.0.2,<1.0.0
 
 # OpenAI for LLM calls
 openai>=1.3.0,<2.0.0
