--- a/requirements.txt
+++ b/requirements.txt
@@ -3,13 +3,13 @@ fastapi>=0.115.6
 uvicorn>=0.34.0
 
 # LangChain ecosystem (updated from pyproject.toml)
-langchain>=0.3.26
-langchain-community>=0.3.27
-langchain-openai>=0.3.27
-langchain-qdrant>=0.2.0
-langgraph==0.5.1
-langsmith>=0.1.0,<0.2.0
-langchain-core>=0.1.50,<0.3.0
+langchain
+langchain-community
+langchain-openai
+langchain-qdrant
+langgraph
+langsmith
+langchain-core
 
 # OpenAI for LLM calls
 openai>=1.3.0,<2.0.0
