--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,16 @@
 # FastAPI and server dependencies
-fastapi>=0.115.6
-uvicorn>=0.34.0
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
 
-# LangChain ecosystem (updated from pyproject.toml)
-langchain
-langchain-community
-langchain-openai
-langchain-qdrant
-langgraph
-langsmith
-langchain-core
+# LangChain ecosystem (production versions)
+langchain>=0.1.20,<0.3.0
+langgraph>=0.0.60,<0.3.0
+langsmith>=0.1.0,<0.2.0
+langchain-core>=0.1.50,<0.3.0
+langchain-community>=0.0.29
+langchain-openai>=0.0.2,<1.0.0
+langchain-text-splitters>=0.0.1,<0.3.0
+langchain-qdrant>=0.2.0
 
 # OpenAI for LLM calls
 openai>=1.3.0,<2.0.0
@@ -23,37 +24,23 @@ pydantic>=2.5.0,<3.0.0
 pydantic-settings>=2.1.0,<3.0.0
 
 # Environment configuration
-python-dotenv>=1.0.1
-redis
+python-dotenv>=1.0.0,<2.0.0
 
 # Type hints
 typing-extensions>=4.8.0
 
 # Tavily API client
-tavily-python>=0.7.9
+tavily-python>=0.2.2,<1.0.0
 
 # Essential LangChain dependencies
 PyYAML>=5.3
 jsonpatch>=1.33
 
-# Document processing and analysis
-arxiv>=2.2.0
-pymupdf>=1.26.3
-pyppeteer>=2.0.0
-
-# Development and visualization
-jupyter>=1.1.1
-mermaid-python>=0.1.0
-graphviz>=0.20.1
-
-# Utility packages
-sync>=1.0.0
-
 # Additional dependencies (preserved from original)
 tiktoken==0.5.2
-python-multipart>=0.0.17
-python-jose>=3.4.0
-python-jose-cryptodome>=1.0.0
+python-multipart==0.0.6
+python-jose[cryptography]==3.3.0
 celery[redis]==5.3.4
+redis>=4.5.2,<5.0.0
 aiofiles==23.2.1
 uuid==1.30 
