--- a/requirements.txt
+++ b/requirements.txt
@@ -3,28 +3,32 @@ fastapi==0.104.1
 uvicorn[standard]==0.24.0
 
 # LangChain ecosystem (production versions)
-langchain>=0.1.20,<0.3.0
-langgraph>=0.0.60,<0.3.0
-langsmith>=0.1.0,<0.2.0
-langchain-core>=0.1.50,<0.3.0
-langchain-community>=0.0.29
-langchain-openai>=0.0.2,<1.0.0
-langchain-text-splitters>=0.0.1,<0.3.0
-langchain-qdrant>=0.2.0
+langchain==0.3.26
+langchain-community==0.3.27
+langchain-core==0.3.68
+langchain-openai==0.3.27
+langchain-qdrant==0.2.0
+langchain-text-splitters==0.3.8
+langgraph==0.5.1
+langgraph-checkpoint==2.1.0
+langgraph-prebuilt==0.5.2
+langgraph-sdk==0.1.72
+langsmith==0.4.5
 
 # OpenAI for LLM calls
-openai>=1.3.0,<2.0.0
+openai==1.95.1
 
 # HTTP client
 httpx>=0.25.2,<1.0.0
 aiohttp>=3.8.0,<4.0.0
 
 # Data validation
-pydantic>=2.5.0,<3.0.0
-pydantic-settings>=2.1.0,<3.0.0
+pydantic==2.11.7
+pydantic-core==2.33.2
+pydantic-settings==2.10.1
 
 # Environment configuration
-python-dotenv>=1.0.0,<2.0.0
+python-dotenv==1.1.1
 
 # Type hints
 typing-extensions>=4.8.0
