--- a/requirements.txt
+++ b/requirements.txt
@@ -41,10 +41,11 @@ PyYAML>=5.3
 jsonpatch>=1.33
 
 # Additional dependencies (preserved from original)
-tiktoken==0.5.2
-python-multipart==0.0.6
-python-jose[cryptography]==3.3.0
+tiktoken==0.9.0
+python-multipart==0.0.20
+python-jose==3.5.0
+python-jose-cryptodome==1.3.2
 celery[redis]==5.3.4
-redis>=4.5.2,<5.0.0
+redis==6.2.0
 aiofiles==23.2.1
 uuid==1.30 
