--- a/requirements.txt
+++ b/requirements.txt
@@ -45,7 +45,7 @@ tiktoken==0.9.0
 python-multipart==0.0.20
 python-jose==3.5.0
 python-jose-cryptodome==1.3.2
-celery[redis]==5.3.4
 redis==6.2.0
-aiofiles==23.2.1
-uuid==1.30 
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.14
+aiosignal==1.4.0
