--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -2,7 +2,7 @@
     "version": 2,
     "framework": "nextjs",
     "env": {
-        "NEXT_PUBLIC_API_BASE_URL": "https://postassist-production.up.railway.app"
+        "NEXT_PUBLIC_API_URL": "https://postassist-production.up.railway.app"
     },
     "headers": [
         {
