fix: Remove deprecated env field from vercel.json and improve API connection documentation
- Remove env field from vercel.json (no longer supported by Vercel)
- Add troubleshooting guide for API connection issues
- Update README with clear environment variable setup instructions
- Environment variables must now be set in Vercel dashboard

Fixes frontend API connectivity issues with Railway backend.

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,9 +1,6 @@
 {
     "version": 2,
     "framework": "nextjs",
-    "env": {
-        "NEXT_PUBLIC_API_URL": "https://postassist-production.up.railway.app"
-    },
     "headers": [
         {
             "source": "/(.*)",
@@ -22,5 +19,10 @@
                 }
             ]
         }
-    ]
+    ],
+    "functions": {
+        "app/**": {
+            "maxDuration": 30
+        }
+    }
 } 
